# linshare-mcp

./: .env.example  .gitignore  Dockerfile  PROMPTS.md  README.md  audit_results.txt  check_tools.py  find_recent_workgroups.py  pyproject.toml  pytest.ini  requirements.txt  server.py.old  verify_setup.py
backup/mcp-servers/: repro_hang.py  run_server.py  test_mcp.py
backup/mcp-servers/linshare_mcp/: main.py
backup/mcp-servers/linshare_mcp/resources/: files.py
linshare-chat-client/: .env.example  Dockerfile  README.md  chainlit.md  chat_client.py  debug_sse.py  docker-compose.yml  list_models.py  requirements.txt  server_sse.py  test_connection.py  test_doc_search.py  test_local_llm.py
linshare-chat-client/.chainlit/: config.toml
linshare-chat-client/.chainlit/translations/: en-US.json  fr-FR.json
linshare-chat-client/public/: script.js  style.css
linshare_mcp/: app.py  config.py  main.py
linshare_mcp/tools/: files.py
linshare_mcp/tools/admin/: audit.py  myspace.py  users.py  workgroups.py
linshare_mcp/tools/user/: audit.py  auth.py  contact_lists.py  files.py  guests.py  myspace.py  myspace_helpers.py  received_shares.py  shares.py  users.py  workgroups.py
linshare_mcp/utils/: auth.py  common.py
scripts/: add_api_tags.py  auto_test_prompts.py  docker-entrypoint.sh  update_tool_tags.py
tests/: conftest.py  test_auth_middleware.py
tests/e2e/: test_sse_server.py
tests/integration/: test_delegation_api.py  test_user_api.py
tests/unit/: test_admin_tools.py  test_auth_manager.py  test_common_tools.py  test_myspace_tools.py  test_user_tools.py
(+14 files in other folders)
